src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__tweaker__tests__main_with_image.snap
---
source: src/configure/ui/tweaker.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃┌ UVC Controls ─────────────────────────────────┐┌ Camera Preview ───────────────────────────────┐┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                    ▄  ▄▄ ▄▄                   │┃"
"┃│                                               ││                 ▄▄▄▄▄▄▄▄▄▄▄ ▄▄                │┃"
"┃│                                               ││              ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ ▄▄             │┃"
"┃│                                               ││              ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄        ▄    │┃"
"┃│                                               ││    ▄▄     ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄     ▄▄  ▄ │┃"
"┃│                                               ││ ▄  ▄▄▄    ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄    ▄▄▄  ▄ │┃"
"┃│                                               ││ ▄▄ ▄▄▄  ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ ▄▄▄▄▄▄ │┃"
"┃│                                               ││ ▄▄▄▄▄▄  ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀ ▄▄▄▄▄▀ │┃"
"┃│                                               ││ ▀▄▄▄▄▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▄▄▄▀  │┃"
"┃│                                               ││  ▀▀▄▄ ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀   │┃"
"┃│                                               ││    ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀     │┃"
"┃│                                               ││     ▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄      │┃"
"┃│                                               ││     ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄    │┃"
"┃│                                               ││     ▀▄▄▄▀▄▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀▀▄▀▄▄▀    │┃"
"┃│                                               ││      ▀▄▄ ▀▄▀▀▀▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀▀▀  ▄▀▄▄▀     │┃"
"┃│                                               ││       ▀▄▄ ▀     ▀▀▀▀▀▀▀▀▀▀▀▀▀▀     ▄▀ ▄▀      │┃"
"┃│                                               ││        ▀▀▄                         ▀ ▄▀       │┃"
"┃│                                               ││          ▀▄                          ▀        │┃"
"┃│                                               ││           ▀                                   │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃└───────────────────────────────────────────────┘└───────────────────────────────────────────────┘┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                            Navigate <Tab>   Edit <Enter>   Quit <Esc>                            ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
