src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__tweaker__tests__menu_empty.snap
---
source: src/configure/ui/tweaker.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                      The tool allows you to modify the UVC camera controls.                      ┃"
"┃┌ Device settings ───────────────────────────────────────────────────────────────────────────────┐┃"
"┃│ Path:  (not a grey camera device)                                                              │┃"
"┃│ Number of emitters: 0                                                                          │┃"
"┃│ Resolution height: auto                                                                        │┃"
"┃│ Resolution width: auto                                                                         │┃"
"┃│ FPS: auto                                                                                      │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃         For more explanation, visit https://github.com/EmixamPP/linux-enable-ir-emitter          ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                          Navigate <Tab>   Continue <Enter>   Quit <Esc>                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
