src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__tweaker__tests__menu_valid_values.snap
---
source: src/configure/ui/tweaker.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                      The tool allows you to modify the UVC camera controls.                      ┃"
"┃┌ Device settings ───────────────────────────────────────────────────────────────────────────────┐┃"
"┃│ Path: /dev/video2                                                                              │┃"
"┃│ Number of emitters: 1                                                                          │┃"
"┃│ Resolution height: 720                                                                         │┃"
"┃│ Resolution width: 1280                                                                         │┃"
"┃│ FPS: 30                                                                                        │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃         For more explanation, visit https://github.com/EmixamPP/linux-enable-ir-emitter          ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                          Navigate <Tab>   Continue <Enter>   Quit <Esc>                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
